# task-client

./: .gitignore  package.json
.github/workflows/: main.yml  mian.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  my_db.db3  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src/pages/: error.tsx
src/pages/about/: index.tsx
src/pages/home/: index.tsx
src/pages/product/: index.tsx
